Error on stretched Pole Target IK #43715

Closed
opened 2015-02-17 22:16:29 +01:00 by Karja Krähwald · 10 comments

System Information
Windows 7 64, GTX 980

Blender Version
Broken: bbf09d9 (2.73a) + 691cb61

Short description of error
Bone Constraint:
IK Stretch doesnt work combined with a Pole Target - Stretch scales to zero.

I dont know if this is a bug, but havent found something on the wiki about this behaviour.

Exact steps for others to reproduce the error
IKStretchPoleBug.blend

Steps: (IK Setup)

  • Create an Armature
    • Create 3 Bones

      • Use 1 for IK-Solver Constraint
      • Use 2 as IK-Target
      • Use 3 as Pole Target
    • Select IK-Solver Bone

      • Go to Properties > Bone > Inverse Kinematics
      • Fill Stretch bar to 1.000

Problem:
The IK-Solver Bone disappears, i guess because of zero scaling and mainly because of the Pole target.

Using the Stretch Bone as part of a at least 2 part IK chain works fine.
But for some reason it dont work with a single bone setup.

**System Information** Windows 7 64, GTX 980 **Blender Version** Broken: bbf09d9 (2.73a) + 691cb61 **Short description of error** Bone Constraint: IK Stretch doesnt work combined with a Pole Target - Stretch scales to zero. I dont know if this is a bug, but havent found something on the wiki about this behaviour. **Exact steps for others to reproduce the error** [IKStretchPoleBug.blend](https://archive.blender.org/developer/F144339/IKStretchPoleBug.blend) Steps: (IK Setup) - Create an Armature - Create 3 Bones - Use 1 for IK-Solver Constraint - Use 2 as IK-Target - Use 3 as Pole Target - Select IK-Solver Bone - Go to Properties > Bone > Inverse Kinematics - Fill Stretch bar to 1.000 **Problem:** The IK-Solver Bone disappears, i guess because of zero scaling and mainly because of the Pole target. Using the Stretch Bone as part of a at least 2 part IK chain works fine. But for some reason it dont work with a single bone setup.

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @karja

Added subscriber: @karja

It seems IK stretch loses its target completely if a Pole target is assigned.
Check this by reducing the constraint influence.

It seems IK stretch loses its target completely if a Pole target is assigned. Check this by reducing the constraint influence.
Member

Added subscriber: @JulienDuroure

Added subscriber: @JulienDuroure
Member

I can reproduce this bug, if IK chain is only 1 bone.
Works fine with 2+ bones chain.
Works fine with 1 bone chain, but without pole.

  • KO for 1 bone chain with pole.

I can reproduce this bug, if IK chain is only 1 bone. Works fine with 2+ bones chain. Works fine with 1 bone chain, but without pole. - > KO for 1 bone chain with pole.
Member

Added subscribers: @brecht, @JulianEisel

Added subscribers: @brecht, @JulianEisel
Member

@brecht, git blame says you did quite some work on this. Any chance you can look into this? cateyes

@brecht, git blame says you did quite some work on this. Any chance you can look into this? *cateyes*
Brecht Van Lommel was assigned by Julian Eisel 2015-02-23 18:10:43 +01:00

This issue was referenced by 726727191a

This issue was referenced by 726727191ab66fb4a02d4d0bd12b03d5f73f1c5f

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Fixed now, thanks for the report.

Fixed now, thanks for the report.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#43715
No description provided.