Fix T43715: IK pole target + stretch not working for a single bone chain.